samples/_failures_safe/1761563694_ec0c20_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d935a803.c: In function ‘main’:
./samples/SAFE/__tmp_d935a803.c:160:13: error: expected declaration or statement at end of input
  160 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_d935a803.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d935a803.c:160:13: error: expected declaration or statement at end of input
